fixed overflow

--- a/client/css/design.scss
+++ b/client/css/design.scss
@@ -3,7 +3,7 @@
 .design {
   // background-color: rgba(16, 16, 46, 0.8);
   background-color: rgba(59, 59, 60, 0.71);
-
+  min-height: 100vh;
   display: flex;
   justify-content: center;
 }
