--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -15,9 +15,10 @@
 
 .container__text--code {
   border: 1px solid #464646;
-  height: auto;
+  max-height: 10rem;
   padding: 1em 0em 1em 0em;
-  margin-top: 1.5rem; }
+  margin-top: 1.5rem;
+  overflow-y: scroll; }
 
 .details-panel {
   width: 80%; }
@@ -151,6 +152,7 @@ span {
 
 .design {
   background-color: rgba(59, 59, 60, 0.71);
+  min-height: 100vh;
   display: flex;
   justify-content: center; }
 
@@ -488,6 +490,9 @@ span p {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
+
+::-webkit-scrollbar {
+  display: none; }
 
 
 /*# sourceMappingURL=style.css.map*/
